--- a/cycle-gan/CycleGAN_Exercise.ipynb
+++ b/cycle-gan/CycleGAN_Exercise.ipynb
@@ -1152,7 +1152,9 @@
     "    batches_per_epoch = min(len(iter_X), len(iter_Y))\n",
     "\n",
     "    for epoch in range(1, n_epochs+1):\n",
-    "        break\n",
+    "        \n",
+    "        g_optimizer.zero_grad()\n",
+    "        \n",
     "        # Reset iterators for each epoch\n",
     "        if epoch % batches_per_epoch == 0:\n",
     "            iter_X = iter(dataloader_X)\n",
@@ -1188,7 +1190,7 @@
     "        D_X_fake_image__loss = fake_mse_loss(G_YtoX_fake_image__out)\n",
     "        \n",
     "        # 4. Compute the total loss and perform backprop\n",
-    "        d_x_loss = D_X_real_image__loss + G_YtoX_fake_image__loss, lambda_weight\n",
+    "        d_x_loss = D_X_real_image__loss + D_X_fake_image__loss, lambda_weight\n",
     "\n",
     "        \n",
     "        ##   Second: D_Y, real and fake loss components   ##\n",
@@ -1201,9 +1203,8 @@
     "        \n",
     "        D_Y_fake_image__loss = fake_mse_loss(D_Y_fake_image__out)\n",
     "        \n",
-    "        d_y_loss = D_Y_real_image__loss + D_XtoY_fake_image__out\n",
+    "        d_y_loss = D_Y_real_image__loss + D_Y_fake_image__loss\n",
     "        \n",
-    "\n",
     "\n",
     "        # =========================================\n",
     "        #            TRAIN THE GENERATORS\n",
@@ -1212,19 +1213,33 @@
     "        ##    First: generate fake X images and reconstructed Y images    ##\n",
     "\n",
     "        # 1. Generate fake images that look like domain X based on real images in domain Y\n",
+    "        G_YtoX_fake_image = G_YtoX(images_Y)\n",
     "\n",
     "        # 2. Compute the generator loss based on domain X\n",
-    "\n",
+    "        D_X_fake_image__out = D_X(G_YtoX_fake_image)\n",
+    "        D_X_fake_image__loss = real_mse_loss(D_X_fake_image__out)\n",
+    "        \n",
     "        # 3. Create a reconstructed y\n",
+    "        G_XtoY_real_image__out = G_XtoY(G_YtoX_fake_image)\n",
     "        \n",
     "        # 4. Compute the cycle consistency loss (the reconstruction loss)\n",
-    "\n",
+    "        reconstruction_y_loss = cycle_consistency_loss(images_Y, G_XtoY_real_image__out, lambda_weight=10)\n",
     "\n",
     "        ##    Second: generate fake Y images and reconstructed X images    ##\n",
-    "\n",
+    "        G_XtoY_fake_image = G_XtoY(images_X)\n",
+    "        \n",
+    "        D_Y_fake_image__out = D_Y(G_XtoY_fake_image)\n",
+    "        D_Y_fake_image__loss = real_mse_loss(D_Y_fake_image__out)\n",
+    "        \n",
+    "        G_YtoX_real_image__out = G_YtoX(G_XtoY_fake_image)\n",
+    "        \n",
+    "        reconstructed_x_loss = cycle_consistency_loss(images_X, G_YtoX_real_image__out, lambda_weight=10)\n",
+    "        \n",
     "        # 5. Add up all generator and reconstructed losses and perform backprop\n",
-    "        g_total_loss = \n",
-    "\n",
+    "        g_total_loss = D_X_fake_image__loss + reconstruction_y_loss + D_Y_fake_image__loss + reconstructed_x_loss\n",
+    "        \n",
+    "        g_total_loss.backward()\n",
+    "        g_optimizer.step()\n",
     "        \n",
     "        # Print the log info\n",
     "        if epoch % print_every == 0:\n",
